--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <script src="p5.js"></script>
     <script src="sketch.js"></script>
     <script src="gameBoard.js"></script>
-    <script src="inputChecker.js"></script>
+    <script src="tileBag.js"></script>
   </head>
   <body>
   </body>
