added tilebag and input checker dependancy

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <style> body {padding: 0; margin: 0;} </style>
     <script src="p5.js"></script>
     <script src="sketch.js"></script>
-    <script src="gameBoard.js"></script>
+    <script src="inputChecker.js"></script>
     <script src="tileBag.js"></script>
   </head>
   <body>
